Fix navbar overlapping

--- a/less/etalab.less
+++ b/less/etalab.less
@@ -261,7 +261,6 @@ a.thumbnail-link {
  */
 
 .navbar {
-    min-height: 80px;
     color: #373c42;
     margin-bottom: 20px;
     border: none;
